--- a/canvasstyles.css
+++ b/canvasstyles.css
@@ -1,3 +1,10 @@
+html {
+	box-sizing: border-box;
+	}
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+
 #canvasPage header {
 	margin-bottom: 3em;
 	}
@@ -9,26 +16,32 @@ canvas  {
 	border: 1px solid black;
 }
 
- #canvasPage div {
- 	width: 30%;
- 	margin-right: 1%;
- 	float: left;
- 	display: inline-block;
- }
+  
  #canvasPage button {
- 	display: inline-block;
+ 	/*display: inline-block;*/
+ 	float: left;
  	 
  }
  #canvasPage form {
- 	position: inherit;
+ 	 
  }
 #animwriter {
+	float: left;
 	margin-top: 8em;
 margin-left: 1em;
+
+ 
+width: 800px;
 }
-#emailer {
-	visibility: hidden;
-	}
+#right{
+	width: 400px;
+	float: left;
+	 
+	 margin-top: 8em;
+	 margin-right: 7em;
+	 margin-left:1em;
+	border: 1px solid red;
+}
 
 .enable {
 	visibility: visible;
@@ -37,4 +50,6 @@ margin-left: 1em;
 	visibility: hidden;
 }
  
- 
+form {
+	position: relative;
+ }
