--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 	margin-bottom: 40px;
 	background: white;
 	/*min-width for my own taste, to stop breaking on resize*/
-	min-width: 40em;*/
+	min-width: 40em;
 	/*background: #fdfdfb;;*/
 	background: #FBF9F9;
 	color: black;
@@ -655,10 +655,7 @@ img[src*="sera"] {
  
 
 /*new styles */
-input:invalid {
-	border: 4px solid red;
-	 
-}
+ 
 form {
 	position: relative;
 	padding: .5em;
@@ -697,9 +694,6 @@ input[type='range'] {
 	height: 1.75em;
 	padding: .25em;
 	margin-left: .5em;
-}
-input[type=radio]:invalid {
-	background: red;
 }
  
  
