--- a/styles.css
+++ b/styles.css
@@ -60,15 +60,15 @@ header {
     position: fixed;
 	top: 0;
 	left: 0;
-    border: 1px solid green;
+     
     /*allow room for all elements in heading */
-	height: 6em;
+	height: 3em;
 	padding-left: 2em;
 	/*gradient to style header */
     /*background: -moz-linear-gradient(top,  rgba(30,87,153,1) 0%, rgba(125,185,232,.8) 100%); /* FF3.6-15 */
     /*background: -webkit-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,.8) 100%); /* Chrome10-25,Safari5.1-6 */
    /* background: linear-gradient(to bottom,  rgba(30,87,153,.9) 0%,rgba(125,185,232,.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    border-bottom: 2px brown solid;
+    
     border-top: 1px brown solid;
     z-index: 5;
 }
@@ -105,13 +105,13 @@ h1 {
 	color:brown;
 	 
 	background: lightgrey;
-	padding: .3em .5em .3em .5em;
+	padding: .2em .5em 0 .5em;
  	width: 30%;
 	min-width: 200px;
 	font-size: 1.2em;
 	float: left;
 	margin: 0px;
-	height: 40px;
+	height: 30px;
     border-radius: 5px;
 }
 /* nav links for home and itinerary page are in nav, nav ul, li */
@@ -120,7 +120,7 @@ nav {
 	margin-top:0;
 	width: 100%;
 	margin: 0 auto;
-	padding: 1.5em 0 1.5em 0;
+	padding: 1.1em 0 1.1em 0;
 	
 }
 nav ul {
@@ -141,7 +141,7 @@ nav ul li{
     display: inline-block;
 	margin-left:20px;
 	position: relative;
-	margin-top:2em;
+	margin-top:1em;
 
 }
 nav a {
@@ -209,6 +209,10 @@ article {
 	margin-top: 0em;
 	width: 100%;
 }
+ 
+select {
+	text-align: center;
+}
 
 /*=== styling of headings, sitewide ===*/
 
@@ -220,22 +224,37 @@ h1, h2, h3 {
 }
 h2 {
 	margin-top: 0;
-	padding-bottom: .5em;
-	padding-top: 1em;
+	margin-bottom: .6em;
+	padding-bottom: .25em;
+	padding-top: .25em;
 	border-bottom: 1px solid black;
-	background: rgb(249,221,169); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(249,221,169,1) 0%, rgba(255,251,245,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, rgba(249,221,169,1) 0%,rgba(255,251,245,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, rgba(249,221,169,1) 0%,rgba(255,251,245,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	 
 	background: lightgrey;
 	border-radius: 10px;
+}
+#centercol h2 {
+	border-bottom: none;
+	background: none;
+
+}
+#style2ndcolbar {
+	background: lightgrey;
+	border-radius: 10px;
+	margin: 0 auto;
+	text-align: center;
+	padding-bottom: .15em;
 }
 h4 {
 	background: #a2f7eb;
 	color: purple;
 }
 h3 {
- background: lightgrey;
+ background: orange;
+ color: black;
+ font-weight: bolder;
+  
+ margin-top: 0;
+ margin-bottom: .3em;
 } 
 /* end headings styling */
 
@@ -271,19 +290,51 @@ body {
 	  
 }
 
-#trip_image {
+img#tripimage {
 	display: block;
-	width: 80%;
+	width: 100%;
 	height: 325px;
-	top: 14.25em;
+	top: 18.5em;
 	
 	border-radius: 15px;
-	border: 2px solid black;
+	border: 10px solid black;
 	position: absolute;
-	margin: .8em auto 0 4em;
+	text-align: center;
+	margin: .5em auto 0 auto;
+
 	
 	 
+
 }
+ 
+ #centercol h2 {
+ 	display:inline-block;
+ 	margin-bottom: 0;
+ 	margin-right: .3em;
+ }
+#tripvibe{
+	width: 140px;
+	font-size: 1em;
+	font-style: bolder;
+	padding: .15em;
+	border-radius: 15px;
+	text-transform: uppercase;
+	background: black;
+	color: white;
+	position: relative;
+	margin-bottom: 0;
+	top: -.15em;
+	display:inline-block;
+	 
+}
+#centercol form {
+	display: inline-block;
+	padding: 0;
+}
+ 
+ optgroup {
+ 	border-radius: 15px;
+ }
 
 #pg1maincontent #centercol section {
 	display:none;
@@ -291,21 +342,25 @@ body {
 	width: 100%;
 
 }
+
 #display {
 	width: 100%;
-	position: relative;
+	
+	background: aqua;
 	text-align: center;
-	margin: 0 auto;
-	height: 12em;
+	margin: .5em auto 0 auto;
+	height: 15.5em;
 	border-radius: 15px;
+	display:none;
 
 }
-#trip_image {
-
+#display p {
+	margin-top: .25em;
 }
+ 
 /* overall site 3-column layout styling, some of which is overridden where needed by styling blocks for page 2 below*/
 #leftcol {
-	margin-top: 6.6em;
+	margin-top: 5.6em;
 	width: 40%; 
 	float: left;
 	font-size: .9em;
@@ -315,23 +370,43 @@ body {
 }
  
 #centercol {
-	width: 40%;
-	float: left;
-	margin-top: 6.6em;
+	width: 30%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: 0 auto;
+	margin-top: 5.6em;
 	border-left: 1px solid red;
 	border-right: 1px solid red;
 	font-size: .9em;
-	height: auto;
+	display: inline-block;
+	height: inherit;
 	max-width: 40%;
 	padding: 0 25px 0 25px;
+	 
+}
+/*background image for centercol*/
+.bgcontainer{
+    position: relative;
+    z-index:1;
+    overflow:hidden; 
+    height: 100%;
+}
+.bgcontainer:before{
+    z-index:-1;
+    position:absolute;
+    left:0;
+    top:0;
+    content: url("images/center.jpg");
+    opacity:0.4;
 }
 #rightcol {
 	/*float: right;*/
 	float: right;
-	width: 20%;
+	width: 30%;
 	word-wrap: break-word;
 	font-size: .9em;
-	margin-top: 6.6em;
+	margin-top: 5.6em;
 	bottom: 0;
 	padding: 0 25px 0 25px;
 }
@@ -346,6 +421,11 @@ body {
  -webkit-column-gap: 30px;
  -moz-column-gap: 30px;
  column-gap: 30px;
+}
+#columncount p {
+	margin-top: .2em;
+	margin-bottom: 0;
+	text-indent: 1em;
 }
 /*fix gap above first column*/
 #leftcol article div p:first-of-type {
