--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,7 @@ img#tripimage {
 	width: 100%;
 	height: 325px;
 	top: 18.5em;
-	
+	z-index: 100;
 	border-radius: 15px;
 	border: 10px solid black;
 	position: absolute;
