--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,13 @@ body {
 
 	  
 }
+h2.imagetitle {
+	text-align: left;
+	margin: 0 auto;
+	 
+	position: absolute;
 
+}
 img#tripimage {
 	display: block;
 	width: 100%;
@@ -346,7 +352,7 @@ img#tripimage {
 #display {
 	width: 100%;
 	
-	background: aqua;
+	
 	text-align: center;
 	margin: .5em auto 0 auto;
 	height: 15.5em;
@@ -356,6 +362,7 @@ img#tripimage {
 }
 #display p {
 	margin-top: .25em;
+	background: aqua;
 }
  
 /* overall site 3-column layout styling, some of which is overridden where needed by styling blocks for page 2 below*/
