--- a/styles.css
+++ b/styles.css
@@ -301,10 +301,11 @@ img#tripimage {
 	width: 100%;
 	height: 325px;
 	top: 18.5em;
-	z-index: 100;
+	z-index: 110;
 	border-radius: 15px;
 	border: 10px solid black;
 	position: absolute;
+
 	text-align: center;
 	margin: .5em auto 0 auto;
 
@@ -387,9 +388,11 @@ img#tripimage {
 	margin-top: 5.6em;
 	border-left: 1px solid red;
 	border-right: 1px solid red;
+	border: 5px solid black;
+	border-radius: 10px;
 	font-size: .9em;
 	display: inline-block;
-	height: inherit;
+	height:60%;
 	max-width: 40%;
 	padding: 0 25px 0 25px;
 	 
