fixed a thing with img crossover

--- a/fmostly good/main_styles.css
+++ b/fmostly good/main_styles.css
@@ -643,7 +643,7 @@ td {
 	text-align:left;
 }
 th {
-	text-align: justify;
+	text-align: center;
 	background: #faf0e6;
 }
 /*table footer is here */
